# call_fortran_from_cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
sources/: abc.f  main.cpp
